--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
-attrs==19.3.0
-big-O-dmunguiatec==0.0.1
-importlib-metadata==1.2.0
-more-itertools==8.0.2
-numpy==1.17.4
-packaging==19.2
-pluggy==0.13.1
-py==1.8.0
-pyparsing==2.4.5
-pytest==5.3.1
-six==1.13.0
-wcwidth==0.1.7
-zipp==0.6.0
+attrs==22.2.0
+big-O==0.10.2
+contourpy==1.0.7
+cycler==0.11.0
+exceptiongroup==1.1.0
+fonttools==4.38.0
+iniconfig==2.0.0
+kiwisolver==1.4.4
+matplotlib==3.7.0
+numpy==1.24.2
+numpysane==0.35
+packaging==23.0
+Pillow==9.4.0
+pluggy==1.0.0
+pyparsing==3.0.9
+pytest==7.2.1
+python-dateutil==2.8.2
+six==1.16.0
+tomli==2.0.1
